--- a/app/component/map/map.scss
+++ b/app/component/map/map.scss
@@ -558,6 +558,7 @@ div.leaflet-marker-icon.vehicle-icon {
   .location-address {
     font-size: 0.9375em;
     font-weight: $font-weight-medium;
+    width: 90%;
   }
 
   .location-place {
